WIP: First cut of API v2
